@@ -1,6 +1,8 @@
 2.5.0 beta2
 ==================
 
+- added WithService.DefaultInterface() to fluent API.IT matches Foo to IFoo, SuperFooExtended to IFoo and IFooExtended etc
+
 - added support for CastleComponentAttribute in fluent Api. Also added helper filter method Component.IsCastleComponent
 
 - added ability to specify interceptors selector as a service, not just as instance
